--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -127,7 +127,7 @@ h3 {
     <div class="dash-box">
         <h1>NA RAÇA</h1>
         <p class="quote">{{ frase }}</p>
-        <h2>E aí jogador, {{ nome }} 👊</h2>
+        <h2>E aí jogador {{ name }} 👊</h2>
 
         <!-- Progresso Amador -->
         <h3>Plano Amador (13 dias)</h3>
