--- a/templates/forgot.html
+++ b/templates/forgot.html
@@ -1,1 +1,17 @@
-<!doctype html><html lang="pt-br"><head><meta charset="utf-8"><title>Recuperar</title><link rel="stylesheet" href="/static/style.css"></head><body class="login-page"><div class="login-box"><h2>Recuperar senha</h2>{% with messages = get_flashed_messages(with_categories=true) %}{% if messages %}{% for cat,msg in messages %}<div class="msg">{{ msg }}</div>{% endfor %}{% endif %}{% endwith %}<form method="post"><input name="email" placeholder="Seu e-mail" required><button>Enviar link</button></form><p><a href="/login">Voltar</a></p></div></body></html>
+<!doctype html><html lang="pt-br"><head><meta charset="utf-8"><title>Recuperar</title><link rel="stylesheet" href="/static/style.css">
+</head>
+<style>
+  .btn-btn {
+      display: inline-block;
+      padding: 12px 18px;
+      margin: 8px 5px 0;
+      background: #334155;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 12px;
+      transition: 0.3s;
+    }
+    
+    </style>
+  </head>
+<body class="login-page"><div class="login-box"><h2>Recuperar senha</h2>{% with messages = get_flashed_messages(with_categories=true) %}{% if messages %}{% for cat,msg in messages %}<div class="msg">{{ msg }}</div>{% endfor %}{% endif %}{% endwith %}<form method="post"><input name="email" placeholder="Seu e-mail" required><button>Enviar link</button></form><p><a href="/login" class= "btn-btn">Voltar</a></p></div></body></html>
