--- a/templates/treino_mobilidade.html
+++ b/templates/treino_mobilidade.html
@@ -175,7 +175,7 @@
         {% endfor %}
       </ul>
       {% if treino.id in concluidos %}
-        <div class="done-label">✅ Concluído</div>
+        <button class="done">✅ Treino Concluído</button>
       {% else %}
         <form method="POST" action="{{ url_for('concluir_treino_mobilidade', dia=treino.id) }}">
           <button type="submit">Concluir Treino</button>
